--- a/plugins/UserSettings/lang/be.json
+++ b/plugins/UserSettings/lang/be.json
@@ -1,8 +1,5 @@
 {
     "UserSettings": {
-        "ColumnConfiguration": "Канфігурацыя",
-        "ColumnResolution": "Дазвол",
-        "Configurations": "Па канфігурацыі",
         "Language_ab": "абхазская",
         "Language_af": "афрыкаанс",
         "Language_am": "амхарская",
@@ -120,12 +117,8 @@
         "LanguageCode": "Код мовы",
         "PluginDescription": "Справаздачы наладак карыстальнікаў: Браўзэр, Сямейства Браўзэр сям'і, Аперацыйная сістэма, Плагіны, Глабальныя параметры.",
         "PluginDetectionDoesNotWorkInIE": "Заўважце: Плагіны не вызначаюцца ў Internet Explorer. Гэта справаздача заснавана на не-IE браўзарах.",
-        "Resolutions": "Па дазволе манітораў",
         "VisitorSettings": "Налады карыстача",
-        "WidgetGlobalVisitors": "Глабальная канфігурацыя",
-        "WidgetGlobalVisitorsDocumentation": "Гэтая справаздача паказвае найбольш распаўсюджаныя агульныя канфігурацыі, якія мелі вашы наведвальнікі. Канфігурацыя - гэта спалучэнне аперацыйнай сістэмы, тыпу браўзэра і дазволу экрана.",
         "WidgetPlugins": "Спіс плагінаў",
-        "WidgetPluginsDocumentation": "Гэтая справаздача паказвае, якія плагіны были ўключаны ў браўзэраў Вашых наведвальнікаў. Гэтая інфармацыя можа мець важнае значэнне для выбару правільнага спосабу дастаўкі кантэнту.",
-        "WidgetResolutions": "Дазвол манітораў"
+        "WidgetPluginsDocumentation": "Гэтая справаздача паказвае, якія плагіны были ўключаны ў браўзэраў Вашых наведвальнікаў. Гэтая інфармацыя можа мець важнае значэнне для выбару правільнага спосабу дастаўкі кантэнту."
     }
 }
