--- a/plugins/UserSettings/lang/da.json
+++ b/plugins/UserSettings/lang/da.json
@@ -3,9 +3,6 @@
         "BrowserLanguage": "Browser sprog",
         "BrowserWithNoPluginsEnabled": "%1$s med ingen aktiverede udvidelsesmoduler",
         "BrowserWithPluginsEnabled": "%1$s med udvidelsesmoduler %2$s aktiveret",
-        "ColumnConfiguration": "Konfiguration",
-        "ColumnResolution": "Opløsning",
-        "Configurations": "Indstillinger",
         "Language_aa": "Afar",
         "Language_ab": "Abkhasisk",
         "Language_ae": "Avestisk",
@@ -193,12 +190,8 @@
         "LanguageCode": "Sprogkode",
         "PluginDescription": "Rapporter brugerindstillinger: browser, browsertype, operativsystem, udvidelsesmoduler, opløsning, globale indstillinger.",
         "PluginDetectionDoesNotWorkInIE": "Note: Udvidelsesmodul detektering virker ikke i Internet Explorer. Rapport viser kun ikke-IE browsere.",
-        "Resolutions": "Opløsninger",
         "VisitorSettings": "Besøgendes indstillinger",
-        "WidgetGlobalVisitors": "Besøgendes konfiguration",
-        "WidgetGlobalVisitorsDocumentation": "Rapporten viser de mest almindelige samlede konfigurationer, som de besøgende havde. En konfiguration er en kombination af et styresystem, en browsertype og en skærmopløsning.",
         "WidgetPlugins": "Udvidelsesmoduler",
-        "WidgetPluginsDocumentation": "Rapporten viser, hvilke browserudvidelser de besøgende havde aktiveret. Oplysningerne kan være vigtigt for at vælge den rigtige måde at levere indholdet på.",
-        "WidgetResolutions": "Skærmopløsninger"
+        "WidgetPluginsDocumentation": "Rapporten viser, hvilke browserudvidelser de besøgende havde aktiveret. Oplysningerne kan være vigtigt for at vælge den rigtige måde at levere indholdet på."
     }
 }
