--- a/plugins/UserSettings/lang/et.json
+++ b/plugins/UserSettings/lang/et.json
@@ -1,9 +1,6 @@
 {
     "UserSettings": {
         "BrowserLanguage": "Veebisirvija keel",
-        "ColumnConfiguration": "Konfiguratsioon",
-        "ColumnResolution": "Resolutsioon",
-        "Configurations": "Konfiguratsioonid",
         "Language_aa": "afari",
         "Language_ab": "abhaasi",
         "Language_ae": "avesta",
@@ -190,10 +187,7 @@
         "Language_zu": "suulu",
         "LanguageCode": "Keele kood",
         "PluginDetectionDoesNotWorkInIE": "Märge: Lisatarkvara tuvastamine ei tööta Internet Exploreriga külastajatel. See raport kuvab andmeid mitte-IE veebisirvikute kohta.",
-        "Resolutions": "Ekraani resolutsioonid",
         "VisitorSettings": "Külastajate seaded",
-        "WidgetGlobalVisitors": "Kohalike külastajate seaded",
-        "WidgetPlugins": "Sirviku lisatarkvarad",
-        "WidgetResolutions": "Ekraani resolutsioonid"
+        "WidgetPlugins": "Sirviku lisatarkvarad"
     }
 }
