--- a/plugins/UserSettings/lang/fa.json
+++ b/plugins/UserSettings/lang/fa.json
@@ -2,9 +2,6 @@
     "UserSettings": {
         "BrowserLanguage": "زبان مرورگر",
         "BrowserWithNoPluginsEnabled": "%1$s با هیچ پلاگین را فعال کنید",
-        "ColumnConfiguration": "پیکربندی",
-        "ColumnResolution": "رزلوشن",
-        "Configurations": "پیکربندی",
         "Language_aa": "آفاری",
         "Language_ab": "آبخازیایی",
         "Language_ae": "اوستایی",
@@ -192,12 +189,8 @@
         "LanguageCode": "کد زبان",
         "PluginDescription": "گزارش تنظیمات کاربر های مختلف: مرورگر، Family (خانواده) مرورگر، سیستم عامل، پلاگین، سایز تصویر، تنظیمات جهانی است.",
         "PluginDetectionDoesNotWorkInIE": "توجه: تشخیص پلاگین در مرورگر اینترنت اکسپلورر کار نمی کند. این گزارش تنها بر روی مرورگرهای غیر اینترنت اکسپلورر است.",
-        "Resolutions": "رزلوشن",
         "VisitorSettings": "تنظیمات بازدید کننده",
-        "WidgetGlobalVisitors": "پیکربندی بازدیدکنندگان جهانی",
-        "WidgetGlobalVisitorsDocumentation": "این گزارش نشان می دهد پیکربندی کلی شایع ترین است که بازدید کنندگان شما است. پیکربندی ترکیبی از سیستم عامل، نوع مرورگر و صفحه نمایش با وضوح است.",
         "WidgetPlugins": "لیست افزونه ها",
-        "WidgetPluginsDocumentation": "این گزارش نشان می دهد که پلاگین مرورگر بازدید کننده خود را فعال کرده بود. این اطلاعات ممکن است مهم برای انتخاب راه درست برای ارائه محتوای خود را.",
-        "WidgetResolutions": "رزلوشن نمایشگر"
+        "WidgetPluginsDocumentation": "این گزارش نشان می دهد که پلاگین مرورگر بازدید کننده خود را فعال کرده بود. این اطلاعات ممکن است مهم برای انتخاب راه درست برای ارائه محتوای خود را."
     }
 }
