--- a/plugins/UserSettings/lang/he.json
+++ b/plugins/UserSettings/lang/he.json
@@ -184,7 +184,6 @@
         "Language_za": "ז'ואנג",
         "Language_zh": "סינית",
         "Language_zu": "זולו",
-        "LanguageCode": "קוד שפה",
-        "WidgetResolutions": "רזולוציית מסך"
+        "LanguageCode": "קוד שפה"
     }
 }
