--- a/plugins/UserSettings/lang/is.json
+++ b/plugins/UserSettings/lang/is.json
@@ -1,8 +1,5 @@
 {
     "UserSettings": {
-        "ColumnConfiguration": "Uppsetning",
-        "ColumnResolution": "Skjáupplausn",
-        "Configurations": "Uppsetningar",
         "Language_aa": "afár",
         "Language_ab": "abkasíska",
         "Language_ae": "avestíska",
@@ -190,10 +187,7 @@
         "LanguageCode": "Kóði tungumáls",
         "PluginDescription": "Gefur skýrslu um ýmsar stillingar gesta:Vafra, Vafrafjölskyldu, Stýrikerfi, Íbætur, Skjáupplausn, altækar stillingar.",
         "PluginDetectionDoesNotWorkInIE": "Ath: uppgötvun á íbótum virkar ekki með Internet Explorer. Þessi skýrsla er aðeins unnin út frá öðrum vöfrum en IE.",
-        "Resolutions": "Skjáupplausnir",
         "VisitorSettings": "Stillingar gesta",
-        "WidgetGlobalVisitors": "Altæk gestastilling",
-        "WidgetPlugins": "Listi yfir íbætur",
-        "WidgetResolutions": "Skjáupplausnir"
+        "WidgetPlugins": "Listi yfir íbætur"
     }
 }
