--- a/plugins/UserSettings/lang/ro.json
+++ b/plugins/UserSettings/lang/ro.json
@@ -3,9 +3,6 @@
         "BrowserLanguage": "Limba browser-ului",
         "BrowserWithNoPluginsEnabled": "%1$s fără plugin-uri activate",
         "BrowserWithPluginsEnabled": "%1$s cu plugin-uri %2$s activate",
-        "ColumnConfiguration": "Configuraţia",
-        "ColumnResolution": "Rezoluţie ecran",
-        "Configurations": "Configurare",
         "Language_aa": "Afar",
         "Language_ab": "abhază",
         "Language_ae": "avestană",
@@ -193,12 +190,8 @@
         "LanguageCode": "Cod limbă",
         "PluginDescription": "Rapoarte difera la setări utilizator: Browser, Browser de familie, sistemul de operare, plugins, Rezolutie, Global Setări.",
         "PluginDetectionDoesNotWorkInIE": "Notă: de detectare a plugin-uri nu funcționează în Internet Explorer. Acest raport se bazează doar pe browsere non-IE.",
-        "Resolutions": "Rezolutii",
         "VisitorSettings": "Setări vizitatori",
-        "WidgetGlobalVisitors": "Configurare vizitatori globala",
-        "WidgetGlobalVisitorsDocumentation": "Acest raport arată cele mai comune configurații generale,pe care vizitatorii le au avut. O configurație este combinația dintre un sistem de operare, un tip de browser și o rezoluție a ecranului.",
         "WidgetPlugins": "Lista pluginurilor",
-        "WidgetPluginsDocumentation": "Acest raport arată ce plugin-uri de browser-ul au activat vizitatorii. Aceste informație ar putea fi importanta pentru a alege modul corect de a livra conținut.",
-        "WidgetResolutions": "Rezolutii ecran"
+        "WidgetPluginsDocumentation": "Acest raport arată ce plugin-uri de browser-ul au activat vizitatorii. Aceste informație ar putea fi importanta pentru a alege modul corect de a livra conținut."
     }
 }
