--- a/plugins/UserSettings/lang/ru.json
+++ b/plugins/UserSettings/lang/ru.json
@@ -1,9 +1,6 @@
 {
     "UserSettings": {
         "BrowserLanguage": "Язык браузера",
-        "ColumnConfiguration": "Конфигурация",
-        "ColumnResolution": "Разрешение",
-        "Configurations": "По конфигурации",
         "Language_aa": "афар",
         "Language_ab": "абхазский",
         "Language_ae": "авестийский",
@@ -191,12 +188,8 @@
         "LanguageCode": "Код языка",
         "PluginDescription": "Ведет учет различных настроек пользователя: браузер, семейство браузера, операционная система, плагины, разрешение экрана, а также глобальные настройки.",
         "PluginDetectionDoesNotWorkInIE": "Учтите: Определение плагинов не работает в Internet Explorer. Этот отчет содержит информацию о не-IE браузерах.",
-        "Resolutions": "По разрешению мониторов",
         "VisitorSettings": "Настройки посетителей",
-        "WidgetGlobalVisitors": "Глобальная конфигурация",
-        "WidgetGlobalVisitorsDocumentation": "Этот отчет показывает общую информацию по наиболее популяоным конфигурациям системы ваших посетителей. Конфигурация - это комбинация операционной системы, браузера и разрешения экрана.",
         "WidgetPlugins": "Список плагинов",
-        "WidgetPluginsDocumentation": "Этот отчет показывается какие плагины посетители используют в своих браузерах. Эта информация может быть важна для того, чтобы посетители смогли видеть ваш контент должным образом.",
-        "WidgetResolutions": "По разрешению мониторов"
+        "WidgetPluginsDocumentation": "Этот отчет показывается какие плагины посетители используют в своих браузерах. Эта информация может быть важна для того, чтобы посетители смогли видеть ваш контент должным образом."
     }
 }
