--- a/plugins/UserSettings/lang/bg.json
+++ b/plugins/UserSettings/lang/bg.json
@@ -3,9 +3,6 @@
         "BrowserLanguage": "Език на браузъра",
         "BrowserWithNoPluginsEnabled": "%1$s без активни добавки",
         "BrowserWithPluginsEnabled": "%1$s с добавки %2$s активиран",
-        "ColumnConfiguration": "Обобщена конфигурация",
-        "ColumnResolution": "Разделителна способност на екрана",
-        "Configurations": "Конфигурации",
         "Language_aa": "афарски",
         "Language_ab": "абхазки",
         "Language_ae": "авестийски",
@@ -193,12 +190,8 @@
         "LanguageCode": "Код на езика",
         "PluginDescription": "Докладът за различните потребителски настройки: Браузър, Браузър Семейство, операционна система, модули, резолюция, Глобални настройки.",
         "PluginDetectionDoesNotWorkInIE": "Забележка: Засичането на добавки не работи при Internet Explorer. Този доклад е базиран само на браузъри, различни от IE.",
-        "Resolutions": "Разделителна способност",
         "VisitorSettings": "Настройки на посетителя",
-        "WidgetGlobalVisitors": "Конфигурация на гло",
-        "WidgetGlobalVisitorsDocumentation": "Този отчет показва повечето общопознати цялостни конфигурации, които вашите посетители са имали. Конфигурация е комбинацията от операционна система, тип на браузера и резолюция на екрана.",
         "WidgetPlugins": "Добавки",
-        "WidgetPluginsDocumentation": "Този отчет показва каква добавка на браузъра са използвали вашите посетители. Тази информация може да е важна, за да изберете правилния начин за доставяне на вашето съдържание.",
-        "WidgetResolutions": "Разделителна способност"
+        "WidgetPluginsDocumentation": "Този отчет показва каква добавка на браузъра са използвали вашите посетители. Тази информация може да е важна, за да изберете правилния начин за доставяне на вашето съдържание."
     }
 }
