--- a/plugins/UserSettings/lang/ca.json
+++ b/plugins/UserSettings/lang/ca.json
@@ -1,8 +1,5 @@
 {
     "UserSettings": {
-        "ColumnConfiguration": "Configuració",
-        "ColumnResolution": "Resolució",
-        "Configurations": "Configuracions",
         "Language_aa": "Afar",
         "Language_ab": "Abkhazian",
         "Language_ae": "Avestan",
@@ -190,12 +187,8 @@
         "LanguageCode": "Codi de l'idioma",
         "PluginDescription": "Informe sobre les preferències del usuari: Navegador, Família del navegador, Sistema Operatiu, Extensions, Resolució, Preferències Globals",
         "PluginDetectionDoesNotWorkInIE": "Nota: La detecció d'extensions no funciona amb Internet Explorer. L'informe es basa nomes amb navegadors diferents de l'Internet Explorer",
-        "Resolutions": "Resolucions",
         "VisitorSettings": "Configuració del visitant",
-        "WidgetGlobalVisitors": "Configuracions globals dels visitants",
-        "WidgetGlobalVisitorsDocumentation": "Aquest informe mostra les configuracions més comuns que tenen els vostres visitants. Una configuració es la combinació de Sistema Operatiu, tipus de navegador i resolució de pantalla.",
         "WidgetPlugins": "Llistat de connectors",
-        "WidgetPluginsDocumentation": "Aquest informe mostra quines extensions tenen els vostres visitants activades. Aquesta informació pot ser important per determinar la forma correcta de mostrar el contingut.",
-        "WidgetResolutions": "Resolucions"
+        "WidgetPluginsDocumentation": "Aquest informe mostra quines extensions tenen els vostres visitants activades. Aquesta informació pot ser important per determinar la forma correcta de mostrar el contingut."
     }
 }
