--- a/plugins/UserSettings/lang/cs.json
+++ b/plugins/UserSettings/lang/cs.json
@@ -3,9 +3,6 @@
         "BrowserLanguage": "Jazyk prohlížeče",
         "BrowserWithNoPluginsEnabled": "%1$s bez povolených zásuvných modulů",
         "BrowserWithPluginsEnabled": "%1$s s povolenými zásuvnými moduly %2$s",
-        "ColumnConfiguration": "Konfigurace",
-        "ColumnResolution": "Rozlišení",
-        "Configurations": "Nastavení",
         "Language_aa": "afarština",
         "Language_ab": "abcházština",
         "Language_ae": "avestánština",
@@ -193,12 +190,8 @@
         "LanguageCode": "Jazykový kód",
         "PluginDescription": "Zobrazí různá uživatelská nastavení: prohlížeč, rodinu prohlížečů, operační systém, zásuvné moduly, rozlišení, globální nastavení.",
         "PluginDetectionDoesNotWorkInIE": "Poznámka: Detekce zásuvných modulů nepracuje v prohlížeči Interet Explorer. Toto hlášení je založeno na ostatních prohlížečích",
-        "Resolutions": "Rozlišení",
         "VisitorSettings": "Nastavení návštěvníků",
-        "WidgetGlobalVisitors": "Hlavní nastavení návštěvníků",
-        "WidgetGlobalVisitorsDocumentation": "Toto hlášení zobrazuje nejčastější konfigurace, které vaši návštěvníci měli. Konfigurace je kombinace operačního systému, prohlížeče a rozlišení.",
         "WidgetPlugins": "Seznam zásuvných modulů",
-        "WidgetPluginsDocumentation": "Toto hlášení zobrazuje zásuvné moduly, které měli vaši návštěvníci povoleny. Tato informace může být důležitá při rozhodování o tom, jakým způsobem prezentovat obsah.",
-        "WidgetResolutions": "Rozlišení obrazovky"
+        "WidgetPluginsDocumentation": "Toto hlášení zobrazuje zásuvné moduly, které měli vaši návštěvníci povoleny. Tato informace může být důležitá při rozhodování o tom, jakým způsobem prezentovat obsah."
     }
 }
