--- a/plugins/UserSettings/lang/el.json
+++ b/plugins/UserSettings/lang/el.json
@@ -3,9 +3,6 @@
         "BrowserLanguage": "Γλώσσα φυλλομετρητή",
         "BrowserWithNoPluginsEnabled": "%1$s με ανενεργά πρόσθετα",
         "BrowserWithPluginsEnabled": "%1$s με %2$s πρόσθετα ενεργά",
-        "ColumnConfiguration": "Ρύθμιση",
-        "ColumnResolution": "Ανάλυση",
-        "Configurations": "Ρυθμίσεις",
         "Language_aa": "Αφαρικά",
         "Language_ab": "Αμπχαζικά",
         "Language_ae": "Αβεστανικά",
@@ -193,12 +190,8 @@
         "LanguageCode": "Κωδικός γλώσσας",
         "PluginDescription": "Αναφέρει διάφορες Ρυθμίσεις Χρήστη: Φυλλομετρητής, Ομάδα Φυλλομετρητών, Λειτουργικό Σύστημα, Πρόσθετα, Ανάλυση, Γενικές Ρυθμίσεις.",
         "PluginDetectionDoesNotWorkInIE": "Σημείωση: η ανίχνευση Προσθέτων δεν λειτουργεί στον Internet Explorer. Αυτή η αναφορά βασίζεται μόνο σε μη IE φυλλομετρητές.",
-        "Resolutions": "Αναλύσεις οθόνης",
         "VisitorSettings": "Ρυθμίσεις επισκέπτη",
-        "WidgetGlobalVisitors": "Γενικές ρυθμίσεις χρηστών",
-        "WidgetGlobalVisitorsDocumentation": "Αυτή η αναφορά δείχνει τις πιο συχνές καθολικές ρυθμίσεις που έχουν οι επισκέπτες σας. Μια ρύθμιση είναι ο συνδυασμός του λειτουργικού συστήματος, του τύπου φυλλομετρητή και της ανάλυσης οθόνης.",
         "WidgetPlugins": "Λίστα προσθέτων",
-        "WidgetPluginsDocumentation": "Αυτή η αναφορά δείχνει ποια πρόσθετα φυλλομετρητή έχουν ενεργά οι επισκέπτες σας. Αυτή η πληροφορία ίσως είναι σημαντική για την επιλογή του πιο σωστού τρόπου απόδοσης του περιεχομένου σας.",
-        "WidgetResolutions": "Αναλύσεις οθόνης"
+        "WidgetPluginsDocumentation": "Αυτή η αναφορά δείχνει ποια πρόσθετα φυλλομετρητή έχουν ενεργά οι επισκέπτες σας. Αυτή η πληροφορία ίσως είναι σημαντική για την επιλογή του πιο σωστού τρόπου απόδοσης του περιεχομένου σας."
     }
 }
