--- a/plugins/UserSettings/lang/fi.json
+++ b/plugins/UserSettings/lang/fi.json
@@ -3,9 +3,6 @@
         "BrowserLanguage": "Selaimen kieli",
         "BrowserWithNoPluginsEnabled": "%1$s ilman liitännäisiä aktivoitu",
         "BrowserWithPluginsEnabled": "%1$s liitännäisillä %2$s on aktivoitu",
-        "ColumnConfiguration": "Asetukset",
-        "ColumnResolution": "Resoluutio",
-        "Configurations": "Asetukset",
         "Language_aa": "afar",
         "Language_ab": "abkhazian",
         "Language_ae": "avestan",
@@ -193,12 +190,8 @@
         "LanguageCode": "Kielikoodi",
         "PluginDescription": "Raportit käyttäjien asetuksista: selain, selaimen perhe, käyttöjärjestelmä, lisäosat, resoluutio, yleiset asetukset.",
         "PluginDetectionDoesNotWorkInIE": "Huom: lisäosien tunnistus ei toimi Internet Explorerissa. Tämä raportti perustuu vain ei-IE-selaimiin.",
-        "Resolutions": "Resoluutio",
         "VisitorSettings": "Kävijöiden asetukset",
-        "WidgetGlobalVisitors": "Kaikkien kävijöiden asetukset",
-        "WidgetGlobalVisitorsDocumentation": "Tämä raportti näyttää yleiskuvan eri käyttäjien asetuksista. Asetukset on yhdistelmä käyttöjärjestelmästä, selaimen tyypistä ja näytön resoluutiosta.",
         "WidgetPlugins": "Lista lisäosista",
-        "WidgetPluginsDocumentation": "Tämä raportti näyttää, mitä selainlisäosia vierailijoillasi oli käytössä. Tästä tiedosta voi olla hyötyä, kun joudut valitsemaan, miten tietoa esitetään ja välitetään vierailijoille.",
-        "WidgetResolutions": "Näytön resoluutio"
+        "WidgetPluginsDocumentation": "Tämä raportti näyttää, mitä selainlisäosia vierailijoillasi oli käytössä. Tästä tiedosta voi olla hyötyä, kun joudut valitsemaan, miten tietoa esitetään ja välitetään vierailijoille."
     }
 }
