--- a/plugins/UserSettings/lang/id.json
+++ b/plugins/UserSettings/lang/id.json
@@ -3,9 +3,6 @@
         "BrowserLanguage": "Bahasa Peramban",
         "BrowserWithNoPluginsEnabled": "%1$s dengan tanpa pengaya diaktifkan",
         "BrowserWithPluginsEnabled": "%1$s dengan %2$s pengaya diaktifkan",
-        "ColumnConfiguration": "Pengaturan",
-        "ColumnResolution": "Resolusi",
-        "Configurations": "Pengaturan",
         "Language_aa": "Afar",
         "Language_ab": "Abkhaz",
         "Language_ae": "Avestan",
@@ -193,12 +190,8 @@
         "LanguageCode": "Kode Bahasa",
         "PluginDescription": "Laporan Pengaturan Pengguna: Peramban, Keluarga Peramban, Sistem Operasi, Pengaya, Resolusi Layar, Pengaturan Umum.",
         "PluginDetectionDoesNotWorkInIE": "Catatan: Pendeteksian pengaya tidak bekerja di Internet Explorer. Laporan ini hanya berdasarkan pada peramban bukan-IE.",
-        "Resolutions": "Resolusi",
         "VisitorSettings": "Pengaturan Pengunjung",
-        "WidgetGlobalVisitors": "Pengaturan pengunjung umum",
-        "WidgetGlobalVisitorsDocumentation": "Laporan ini menunjukkan pengaturan paling umum yang pengunjung miliki. Subuah pengaturan terdiri atas sistem operasi, jenis peramban, dan resolusi layar.",
         "WidgetPlugins": "Daftar Pengaya",
-        "WidgetPluginsDocumentation": "Laporan ini menunjukkan pengaya peramban yang diaktifkan oleh pengunjung. Informasi yang tersedia kemungkinan penting untuk memilih cara terbaik untuk menyampaikan konten Anda.",
-        "WidgetResolutions": "Resolusi layar"
+        "WidgetPluginsDocumentation": "Laporan ini menunjukkan pengaya peramban yang diaktifkan oleh pengunjung. Informasi yang tersedia kemungkinan penting untuk memilih cara terbaik untuk menyampaikan konten Anda."
     }
 }
