--- a/plugins/UserSettings/lang/ko.json
+++ b/plugins/UserSettings/lang/ko.json
@@ -1,9 +1,6 @@
 {
     "UserSettings": {
         "BrowserLanguage": "브라우저 언어",
-        "ColumnConfiguration": "구성",
-        "ColumnResolution": "해상도",
-        "Configurations": "구성",
         "Language_aa": "아파르어",
         "Language_ab": "압하스어",
         "Language_ae": "아베스타어",
@@ -191,12 +188,8 @@
         "LanguageCode": "언어 코드",
         "PluginDescription": "각종 사용자 설정 (브라우저, 브라우저 페밀리, 운영 시스템, 플러그인, 해상도, 일반 설정)를 보고합니다.",
         "PluginDetectionDoesNotWorkInIE": "참고: Internet Explorer에서는 플러그인 검색이 작동하지 않습니다. 이 보고서는 IE 브라우저가 아닌것에 기반합니다.",
-        "Resolutions": "해상도",
         "VisitorSettings": "방문자 설정",
-        "WidgetGlobalVisitors": "글로벌 방문자 구성",
-        "WidgetGlobalVisitorsDocumentation": "방문자의 가장 일반적인 사용 환경에 대한 보고서입니다. 운영 체제, 브라우저 종류와 화면 해상도의 조합으로 표시합니다.",
         "WidgetPlugins": "플러그인 목록",
-        "WidgetPluginsDocumentation": "방문자가 사용하는 브라우저의 플러그인에 대한 보고서입니다. 컨텐츠에 대한 최적의 표시 방법을 선택하는 데 중요한 정보입니다.",
-        "WidgetResolutions": "스크린 해상도"
+        "WidgetPluginsDocumentation": "방문자가 사용하는 브라우저의 플러그인에 대한 보고서입니다. 컨텐츠에 대한 최적의 표시 방법을 선택하는 데 중요한 정보입니다."
     }
 }
