--- a/plugins/UserSettings/lang/nl.json
+++ b/plugins/UserSettings/lang/nl.json
@@ -3,9 +3,6 @@
         "BrowserLanguage": "Browsertaal",
         "BrowserWithNoPluginsEnabled": "%1$s zonder plugins ingeschakeld",
         "BrowserWithPluginsEnabled": "%1$s met plugins %2$s ingeschakeld",
-        "ColumnConfiguration": "Configuratie",
-        "ColumnResolution": "Resolutie",
-        "Configurations": "Configuraties",
         "Language_aa": "Afar",
         "Language_ab": "Abchazisch",
         "Language_ae": "Avestisch",
@@ -193,12 +190,8 @@
         "LanguageCode": "Taal code",
         "PluginDescription": "Rapporteert verschillende gebruikers instellingen: Browser, Browser familie, Besturingssysteem, Plugins, Resolutie, Globale Instellingen.",
         "PluginDetectionDoesNotWorkInIE": "Opmerking: plugin detectie werkt niet in Internet Explorer. Het rapport is alleen gebaseerd op andere browsers dan IE",
-        "Resolutions": "Schermresoluties",
         "VisitorSettings": "Bezoekers Instellingen",
-        "WidgetGlobalVisitors": "Algemene configuratie",
-        "WidgetGlobalVisitorsDocumentation": "Dit rapport toont de meest voorkomende configuraties die uw bezoekers hadden. Een configuratie is de combinatie van een besturingssysteem, een browser type en een schermresolutie.",
         "WidgetPlugins": "Geïnstalleerde plugins",
-        "WidgetPluginsDocumentation": "Dit rapport laat zien welke browserplugins uw bezoekers haden geïnstalleerd. Deze informatie kan van belang zijn voor het kiezen van de juiste manier om uw content aan te bieden.",
-        "WidgetResolutions": "Schermresoluties"
+        "WidgetPluginsDocumentation": "Dit rapport laat zien welke browserplugins uw bezoekers haden geïnstalleerd. Deze informatie kan van belang zijn voor het kiezen van de juiste manier om uw content aan te bieden."
     }
 }
