--- a/plugins/UserSettings/lang/pt.json
+++ b/plugins/UserSettings/lang/pt.json
@@ -1,8 +1,5 @@
 {
     "UserSettings": {
-        "ColumnConfiguration": "Configuração",
-        "ColumnResolution": "Resolução",
-        "Configurations": "Configurações",
         "Language_aa": "afar",
         "Language_ab": "abcázio",
         "Language_ae": "avéstico",
@@ -190,12 +187,8 @@
         "LanguageCode": "Código do idioma",
         "PluginDescription": "Relata várias Definições de Utilizador: Navegador, Família de Navegadores, Sistema Operativo, Plugins, Resolução, Definições Globais",
         "PluginDetectionDoesNotWorkInIE": "Nota: Detecção de plugins não funciona no Internet Explorer. Este relatório só se baseia em navegadores não-IE.",
-        "Resolutions": "Resoluções",
         "VisitorSettings": "Definições do Visitante",
-        "WidgetGlobalVisitors": "Configuração global dos visitantes",
-        "WidgetGlobalVisitorsDocumentation": "Este relatório mostra as configurações gerais mais comuns que os visitantes tiveram. Uma configuração é a combinação de um sistema operativo, um tipo de navegador e uma resolução de visualização.",
         "WidgetPlugins": "Lista de Plugins",
-        "WidgetPluginsDocumentation": "Este relatório mostra quais os plugin que o navegador dos seus visitantes tinham. Esta informação pode ser importante para a escolha do caminho certo para distribuir o seu conteúdo.",
-        "WidgetResolutions": "Resoluções de Ecrã"
+        "WidgetPluginsDocumentation": "Este relatório mostra quais os plugin que o navegador dos seus visitantes tinham. Esta informação pode ser importante para a escolha do caminho certo para distribuir o seu conteúdo."
     }
 }
