--- a/plugins/UserSettings/lang/sr.json
+++ b/plugins/UserSettings/lang/sr.json
@@ -3,9 +3,6 @@
         "BrowserLanguage": "Jezik brauzera",
         "BrowserWithNoPluginsEnabled": "%1$s sa isključenim dodacima",
         "BrowserWithPluginsEnabled": "%1$s sa uključenim dodacima %2$s",
-        "ColumnConfiguration": "Podešavanja",
-        "ColumnResolution": "Rezolucija",
-        "Configurations": "Podešavanja",
         "Language_aa": "Afar",
         "Language_ab": "Abhazijski",
         "Language_ae": "Avestan",
@@ -193,12 +190,8 @@
         "LanguageCode": "Kod jezika",
         "PluginDescription": "Izveštaj o različitim parametrima vezanim za posetioce: brauzeri, operativni sistemi, dodaci, ekranske rezolucije, globalna podešavanja.",
         "PluginDetectionDoesNotWorkInIE": "Pažnja: detekcija dodataka ne radi kod Internet Explorera. Ovaj izveštaj se odnosi samo na brauzere koji nisu Internet Exlorer",
-        "Resolutions": "Rezolucije",
         "VisitorSettings": "Parametri posetilaca",
-        "WidgetGlobalVisitors": "Globalna podešavanja posetilaca",
-        "WidgetGlobalVisitorsDocumentation": "Ovaj izveštaj prikazuje najčešća podešavanja vaših posetilaca. Pod podešavanjem podrazumevamo kombinaciju operativnog sistema, tipa brauzera i ekranske rezolucije.",
         "WidgetPlugins": "Lista dodataka",
-        "WidgetPluginsDocumentation": "Ovaj izveštaj prikazuje koje dodatke za brauzere vaši posetioci imaju uključene. Ova informacija može biti od značaja prilikom odabira pravog načina prikaza sadržaja na vašem sajtu.",
-        "WidgetResolutions": "Rezolucije ekrana"
+        "WidgetPluginsDocumentation": "Ovaj izveštaj prikazuje koje dodatke za brauzere vaši posetioci imaju uključene. Ova informacija može biti od značaja prilikom odabira pravog načina prikaza sadržaja na vašem sajtu."
     }
 }
