--- a/plugins/UserSettings/lang/tr.json
+++ b/plugins/UserSettings/lang/tr.json
@@ -1,8 +1,5 @@
 {
     "UserSettings": {
-        "ColumnConfiguration": "Konfigürasyon",
-        "ColumnResolution": "Çözünürlük",
-        "Configurations": "Konfigürasyonları",
         "Language_aa": "Afar",
         "Language_ab": "Abazca",
         "Language_ae": "Avestçe",
@@ -190,10 +187,7 @@
         "LanguageCode": "Dil kodu",
         "PluginDescription": "Çeşitli kullanıcı rapor ayalari: Tarayıcı, Tarayıcı Ailesi, İşletim Sistemi, Eklentiler, Çözünürlük, Genel Ayarlar.",
         "PluginDetectionDoesNotWorkInIE": "Not: Hedeflenen eklenti Internet Explorer çalışmamaktadir. Bu not\/rapor sadece IE içindir.",
-        "Resolutions": "Çözünürlükler",
         "VisitorSettings": "Ziyaretçi Ayarlari",
-        "WidgetGlobalVisitors": "Global ziyaretçi konfikasyonu",
-        "WidgetPlugins": "Eklenti Listesi",
-        "WidgetResolutions": "Ekran çözünürlükleri"
+        "WidgetPlugins": "Eklenti Listesi"
     }
 }
