--- a/plugins/UserSettings/lang/vi.json
+++ b/plugins/UserSettings/lang/vi.json
@@ -3,9 +3,6 @@
         "BrowserLanguage": "Ngôn ngữ trình duyệt",
         "BrowserWithNoPluginsEnabled": "%1$s không có plugin nào được kích hoạt",
         "BrowserWithPluginsEnabled": "%1$s với plugin %2$s đã kích hoạt",
-        "ColumnConfiguration": "Cấu hình",
-        "ColumnResolution": "Độ phân giải",
-        "Configurations": "cấu hình",
         "Language_aa": "Tiếng Afar",
         "Language_ab": "Tiếng Abkhazia",
         "Language_ae": "Tiếng Avestan",
@@ -193,12 +190,8 @@
         "LanguageCode": "Mã ngôn ngữ",
         "PluginDescription": "Cài đặt báo cáo người dùng khác nhau: trình duyệt, họ trình duyệt, Hệ điều hành, Plugin, Độ phân giải, Cài đặt tổng quát.",
         "PluginDetectionDoesNotWorkInIE": "Chú ý: Các Plugin phát hiện không làm việc trên Internet Explorer. Báo cáo này chỉ dựa trên trình duyệt không phải IE.",
-        "Resolutions": "Độ phân giải",
         "VisitorSettings": "Thiết lập khách truy cập",
-        "WidgetGlobalVisitors": "Cấu hình khách truy cập",
-        "WidgetGlobalVisitorsDocumentation": "Báo cáo này cho thấy các cấu hình tổng thể phổ biến nhất mà khách truy cập của bạn đã có. Một cấu hình là sự kết hợp của một hệ điều hành, một loại trình duyệt và độ phân giải màn hình.",
         "WidgetPlugins": "Các Plugin trình duyệt",
-        "WidgetPluginsDocumentation": "Báo cáo này cho thấy các plugin trình duyệt mà khách truy cập của bạn đã kích hoạt. Thông tin này có thể là quan trọng cho việc lựa chọn cách đúng để cung cấp nội dung của bạn.",
-        "WidgetResolutions": "Độ phân giải màn hình"
+        "WidgetPluginsDocumentation": "Báo cáo này cho thấy các plugin trình duyệt mà khách truy cập của bạn đã kích hoạt. Thông tin này có thể là quan trọng cho việc lựa chọn cách đúng để cung cấp nội dung của bạn."
     }
 }
